@@ -50,6 +50,7 @@ v0.9 [2016-]
             - remove "lfs_a()" shortcut and use original "lfs_attributes()" instead
             - remove "util_*()" shortcuts and use original "util.*()" methods
             - changed "log_handler()" to read the temporary logfile only once
+            - replaced "set_logfilesize()" to heavy reduce calling "wx.wxFileSize()" method
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
